@@ -7,18 +7,6 @@ java {
     targetCompatibility = JavaVersion.VERSION_16
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
 repositories {
     mavenCentral()
 }
